# reading_the_unreadable

./: .gitignore  BLN600_model_test.py  CLAUDE.md  README.md  analysis.py  analysis_functions.py  bbox_functions.py  classification_data_and_analysis.py  cleanlab_cleaning.py  comparative_analysis.py  convert_all_compressed.py  convert_all_ncse.py  convert_american_stories.py  convert_ncse_test_pdfs.py  create_cropped_ncse_test_images.py  create_ncse_test_set.py  create_newspaper_bounding_boxes.py  create_sequence_split_set.py  create_silver_set.ipynb  create_training_set.py  crop_and_send_to_mistral.py  deskew_and_ratio_experiments_batch.py  docling_bounding.py  docling_experiment.py  download_batched_results_from_pixtral.py  evaluation_funcs.py  experiment_deskew_and_ratio_batch_download.py  experiment_deskew_and_ratio_batch_send.py  experiment_deskew_crop_download_batched_results.py  explore_image_errors.py  explore_sql.ipynb  helper_functions.py  helper_functions_class.py  helper_functions_plotting.py  image_cropping.py  manage_images.ipynb  messy_stuff.ipynb  model_compare.ipynb  ncse_testset_bounding.py  new_approach.py  (+22 more)
alternative_models/: effic_ocr.ipynb  tesseract_testing.ipynb
function_modules/: README.md  analysis_functions.py  bbox_functions.py  helper_functions.py  helper_functions_class.py  pipeline.py  pipeline_stages.py  send_to_lm_functions.py  text_classification.py  util_funcs.py
lightning_scripts/: IPTC_trainer.py  effic_ocr.py  infer_folder.py  parallel_send_processed_issues_to_pixtral_as_batch.py  predict_bbox_docyolo.py  tesserect_testing.py  (+1 more)
(+19 files in other folders)
