[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reading_the_unreadable"
version = "0.1.0"
description = "Tools for processing historical newspaper documents"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Jonathan Bourne"}
]

[tool.setuptools]
packages = ["function_modules"]

[tool.setuptools.package-data]
function_modules = ["*.json", "*.yaml"]  # Include any data files your package needs

[options]
package_dir = {""="."}
