[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reading_the_unreadable"
version = "0.1.0"
description = "Tools for processing historical newspaper documents"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Jonathan Bourne"}
]

[tool.setuptools]
packages = ["function_modules"]

[tool.setuptools.package-data]
function_modules = ["*.json", "*.yaml"]  # Include any data files your package needs

[options]
package_dir = {""="."}

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0"
]
